--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
       <meta name="distribution" content="global"/>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="Description" content="It is a slot game that uses the technology of Ethereum using an smart contract, which offers a betting service in a random and safe way. Ethereum Casino, Ethereum Gambling, Ethereum Gameplay, Ethereum Games.">
+
+
+      <meta property="og:url"                content="https://jackypot.io/" />
+      <meta property="og:type"               content="website" />
+      <meta property="og:title"              content="jackypot.io - Ethereum Casino, Ethereum Gambling, Ethereum Gameplay, Ethereum Games." />
+      <meta property="og:description"        content="It is a slot game that uses the technology of Ethereum using an smart contract, which offers a betting service in a random and safe way. Ethereum Casino, Ethereum Gambling, Ethereum Gameplay, Ethereum Games." />
+      <meta property="og:updated_time"       content="1520355280" />
+      <meta property="og:image"   content="https://jackypot.io/assets/game/machine.png" />
+
       <title>jackypot.io - Ethereum Casino, Ethereum Gambling, Ethereum Gameplay, Ethereum Games.</title>
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -59,6 +68,7 @@
       <link rel="stylesheet" href="css/responsive.css">
 
       <!-- Script -->
+      <script type="text/javascript" src="js/sdk-facebook.js"></script>
       <script type="text/javascript" src="js/snap.svg.js"></script>
       <script type="text/javascript" src="js/blockies.js"></script>
       <script type="text/javascript" src="js/clipboard.js"></script>
@@ -1128,6 +1138,21 @@
             </div>
         </div>
     </div>
+    <!-- Btn compartir -->
+    <div class="video" id="compartir-window">
+            <!-- Modal content -->
+            <div class="modal" id="compartir-modal">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <span class="close" id="compartir-close">&times;</span>
+                        <h2>TUTORIAL</h2>
+                    </div>
+                    <div class="modal-body">
+                        <button id="share-jackypot">Compartir</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/form.js"></script>
     <script type="text/javascript" src="js/machine.js"></script>
