Evento de compartir listo, solo esperando la aprovacion de facebook

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <link rel="stylesheet" href="css/responsive.css">
 
       <!-- Script -->
+      <div id="fb-root"></div>
       <script type="text/javascript" src="js/sdk-facebook.js"></script>
       <script type="text/javascript" src="js/snap.svg.js"></script>
       <script type="text/javascript" src="js/blockies.js"></script>
@@ -1145,10 +1146,11 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <span class="close" id="compartir-close">&times;</span>
-                        <h2>TUTORIAL</h2>
+                        <h2>Share with your friends</h2>
                     </div>
                     <div class="modal-body">
-                        <button id="share-jackypot">Compartir</button>
+                        <h2>To continue, tell a friend about Jackypot</h2>                    
+                        <button id="share-jackypot"> <img src="assets/footer/facebook-logo.png" alt="Facebook"> Share</button>
                     </div>
                 </div>
             </div>
