Se cambio el comportamiento del demo ahora es: 1 giro, compartir, direccion e instricciones

--- a/index.html
+++ b/index.html
@@ -829,12 +829,11 @@
                         <div class="titulo-2">
                             <h2 id="contador-tiros-entregados" class="sombras-c">Loading...</h2>
                         </div>
-
                     </div>
                     <div class="contenedor-slider">
                         <div class="slider">
                             <div class="slider-content">
-                                <h3>Board 20,000 points and receive a free bet with a value of 0.01 ETH.</h3>
+                                <h3>Click PLAY and receive a free bet with a value of 0.01 ETH.</h3>
                             </div>
                         </div>
                         <div class="slider">
@@ -885,9 +884,8 @@
                         </div>
                     </div>
                     <div class="contenedor-ganador" id="contenedor-ganador">
-                        <h3>Congratulations you just won a free bet! Please send your address to get the prize.</h3>
-                        <textarea name="name" rows="2" cols="auto" maxlength="42" spellcheck="false" placeholder="Paste your public address here." id="textAreaAddress"></textarea>
-                        <button type="button" name="button" id="enviarRecursoPromocion">SEND</button>
+                        <h3 style="margin-top: 150px;">Share with your friends to get a free bet!</h3>
+                        <button id="share-jackypot"> <img src="assets/footer/facebook-logo.png" alt="Facebook"> Share</button>
                     </div>
                     <!-- <div class="contenedor-Bdatos">
                         <h2 class="">Check your free bets</h2>
