Se agregaron ultimos cambios al demo

--- a/index.html
+++ b/index.html
@@ -884,7 +884,8 @@
                         </div>
                     </div>
                     <div class="contenedor-ganador" id="contenedor-ganador">
-                        <h3 style="margin-top: 150px;">Share with your friends to get a free bet!</h3>
+                        <h3 style="margin-top: 50px; color: #30c730">Congratulations, You've Won 1 Free Bet with Value at 0.01 Ethereum</h3>
+                        <h3>Share with your friends to get a free bet!</h3>
                         <button id="share-jackypot"> <img src="assets/footer/facebook-logo.png" alt="Facebook"> Share</button>
                     </div>
                     <!-- <div class="contenedor-Bdatos">
