cambie el disqus a free bets, a free bets se le cambiaron las promociones, se quitaron los slider y el checador de apuestas gratis

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
             </div>
             <div class="chat" id="chat-con">
-               <div id="disqus_thread"></div>
+               <!-- <div id="disqus_thread"></div>
                <script>
                   setTimeout(function () {
                      var disqus_config = function () {
@@ -282,8 +282,8 @@
                </script>
                <noscript>Please enable JavaScript to view the
                   <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-               </noscript>
-            </div>
+               </noscript>-->
+            </div> 
          </div>
          <!-- Collapse only movil version -->
          <div class="box collapse">
@@ -1094,11 +1094,18 @@
          <div class="contenedor-free-bets">
             <!-- Promocion 1 -->
             <div class="free-bets-promocion">
+                <h1 class="verde">LAUNCHING OFFER: 2,000 FREE BETS!</h1>
+                <p class="amarillo">have you reacived 0.00 ether in your ethereum wallet from Jackypot?, Congratulations! you have a Free Bet </p>
+                <p class="blanco">to do your free bet follow these instructions</p>
+                <p class="blanco"><a class="amarillo">STEP 1 :</a>Send 0.00 ether to the following address</p>
+                <p class="address-game blanco" id="address-game" data-clipboard-text="0xFeac34425a3Ba2FAfbbEEDB367aC5F4b4bB701D2">0 x F e a c 3 4 4 2 5 a 3 B a 2 F A f b b E E D B 3 6 7 a C 5 F 4 b 4 b B 7 0 1 D 2</p>
+                <p class="blanco"><a class="amarillo">STEP 2 :</a> Check your results in the table "Last Bet", which you could find in the Main page of "jackypot.io"</p>
+                <p class="blanco">Enjoy your prize</p>
                <!-- Contenedor de la promocion -->
-               <h2>Promotion 1</h2>
+               <!-- <h2>Promotion 1</h2>
                <h3>You lost ?... You Win!</h3>
                <!-- Slider -->
-               <div class="contenedor-slider">
+               <!-- <div class="contenedor-slider">
                   <div class="slider">
                      <div class="slider-content">
                         <p>
@@ -1131,50 +1138,56 @@
                            <span class="negro">9.</span> Promotion valid until awarding 1000 free throws or until March 31, 2018.</p>
                      </div>
                   </div>
-               </div>
+               </div> -->
                <!-- Controles slider -->
-               <div class="contenedor-controles">
+               <!-- <div class="contenedor-controles">
                   <div class="controls">
                      <ul></ul>
                   </div>
                </div>
                <div class="contenedor-btn-freeBets">
                   <button type="button" name="button" class="btn-free-bet">Go post</button>
-               </div>
+               </div> -->
             </div>
             <!-- Promocion 2 -->
-            <div class="free-bets-datos" id="contenedor-free-bets">
+             <div class="free-bets-datos" id="contenedor-free-bets">
                <!-- Contenedor de los datos -->
-               <div class="titulo-bets">
+               <!-- <div class="titulo-bets">
                   <div class="titulo-1">
                      <h2>Promotion 2</h2>
-                  </div>
-                  <div class="titulo-2">
+                  </div> -->
+                  <!-- <div class="titulo-2">
                      <h2 id="contador-tiros-entregados" class="sombras-c">Loading...</h2>
                   </div>
-               </div>
-               <div class="contenedor-slider">
+               </div> -->
+               <!-- <div class="contenedor-slider">
                   <div class="slider">
                      <div class="slider-content">
+
                         <h3>Click PLAY and receive a free bet with a value of 0.01 ETH.</h3>
+                        <br>
+                        <h3>To receive the free bet, you have to send your public address.</h3>
+                     
                      </div>
-                  </div>
-                  <div class="slider">
+                  </div> -->
+                  <!-- <div class="slider">
                      <div class="slider-content">
                         <h3>To receive the free bet, you have to send your public address.</h3>
                      </div>
-                  </div>
-                  <div class="slider">
+                  </div> -->
+                  <!-- <div class="slider">
                      <div class="slider-content">
                         <h3>Place free bets by sending 0 ETH to our contract.</h3>
+                        <br>
+                        <h3>You can only receive a free bet every 24 hours.</h3>
                      </div>
-                  </div>
-                  <div class="slider">
+                  </div> -->
+                  <!-- <div class="slider">
                      <div class="slider-content">
                         <h3>You can only receive a free bet every 24 hours.</h3>
                      </div>
-                  </div>
-                  <div class="slider">
+                  </div> -->
+                  <!-- <div class="slider">
                      <div class="slider-content">
                         <h3>This promotion is only valid until you have delivered 1000 bets or until March 31.</h3>
                      </div>
@@ -1184,8 +1197,8 @@
                   <div class="controls">
                      <ul></ul>
                   </div>
-               </div>
-               <div class="contenedor-maquina-juguete" id="contenedor-maquina-juguete">
+               </div> -->
+               <!-- <div class="contenedor-maquina-juguete" id="contenedor-maquina-juguete">
                   <div class="maquina-juguete">
                      <div class="img-machine-juguete">
                         <svg id="svg-juguete"></svg>
@@ -1206,35 +1219,62 @@
                   <div class="btn-play-juguete">
                      <input type="image" src="assets/game/btn-play.png" onclick="jugar_por_puntos()">
                   </div>
-               </div>
-               <div class="contenedor-ganador" id="contenedor-ganador">
+               </div> -->
+               <!-- <div class="contenedor-ganador" id="contenedor-ganador">
                   <h3 style="margin-top: 50px; color: #30c730">Congratulations, You've Won 1 Free Bet with Value at 0.01 Ethereum</h3>
                   <h3>Share with your friends to get a free bet!</h3>
                   <button id="share-jackypot">
                      <img src="assets/footer/facebook-logo.png" alt="Facebook"> Share</button>
-               </div>
-               <!-- <div class="contenedor-Bdatos">
-                        <h2 class="">Check your free bets</h2>
+               </div> -->
+               <!-- <div class="contenedor-Bdatos"> -->
+                        <!-- <h2 class="">Check your free bets</h2>
                         <div class="search">
                             <input type="text" name="addres-bets">
                             <button type="button" id="btn-private">Personal</button>
                             <button type="button" id="btn-all">All</button>
-                        </div>
-                        <div class="title-bets">
+                        </div> -->
+                        <!-- <div class="title-bets">
                             <div class="title-adr">
                                 <p>Address</p>
                             </div>
                             <div class="title-bets">
                                 <p>Free bets</p>
                             </div>
-                        </div>
-                        <div class="con-table" id="con-table">
+                        </div> -->
+                        <h1 class="is-size-1">Check Your Free Bets</h1>
+                            <p><label class="label has-text-white is-medium">Insert your "ethereum address" of your wallet and check how many free bets you have</label></p>
+                            <input id="tt" class="input" type="text" placeholder="Paste your ethereum addres here">
+                        <div id="lista" class="">
 
                         </div>
-                    </div> -->
+
             </div>
-         </div>
-      </div>
+            <div class="free-bets-chat">
+                    <div id="disqus_thread"></div>
+               <script>
+                  setTimeout(function () {
+                     var disqus_config = function () {
+                        this.page.url = "http://Jackypot.io"; // Replace PAGE_URL with your page's canonical URL variable
+                        this.page.identifier = "jackypot"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                     };
+
+                     (function () { // DON'T EDIT BELOW THIS LINE
+                        var d = document,
+                           s = d.createElement('script');
+                        s.src = 'https://jackypot.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                     })();
+
+                  }, 8000);
+               </script>
+               <noscript>Please enable JavaScript to view the
+                  <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+               </noscript>
+            </div>
+        </div>
+    </div>
+
       <!-- Terminos-->
       <div class="terms" id="terms-window">
          <h2>Terms and Conditions</h2>
@@ -1550,9 +1590,7 @@
    <script type="text/javascript" src="js/index.js"></script>
    <script type="text/javascript" src="js/form.js"></script>
    <script type="text/javascript" src="js/machine.js"></script>
-   <script type="text/javascript" src="js/slider.js"></script>
-   <script type="text/javascript" src="js/slider-maq.js"></script>
-   <script type="text/javascript" src="js/slider-m.js"></script>
+   <script type="text/javascript" src="js/checkbets.js"></script>
 </body>
 
 </html>
