--- a/index.html
+++ b/index.html
@@ -1097,10 +1097,11 @@
                 <h1 class="verde">LAUNCHING OFFER: 2,000 FREE BETS!</h1>
                 <p class="amarillo">have you reacived 0.00 ether in your ethereum wallet from Jackypot?, Congratulations! you have a Free Bet </p>
                 <p class="blanco">to do your free bet follow these instructions</p>
-                <p class="blanco"><a class="amarillo">STEP 1 :</a>Send 0.00 ether to the following address</p>
+                <p class="blanco"><a class="amarillo">STEP 1 :</a>Send 0.00 ether to the following address(the fee to claim a free bet is 0.00012 ethereum)</p>
                 <p class="address-game blanco" id="address-game" data-clipboard-text="0xFeac34425a3Ba2FAfbbEEDB367aC5F4b4bB701D2">0 x F e a c 3 4 4 2 5 a 3 B a 2 F A f b b E E D B 3 6 7 a C 5 F 4 b 4 b B 7 0 1 D 2</p>
                 <p class="blanco"><a class="amarillo">STEP 2 :</a> Check your results in the table "Last Bet", which you could find in the Main page of "jackypot.io"</p>
-                <p class="blanco">Enjoy your prize</p>
+                <p class="blanco fix2">Enjoy your prize</p>
+                <button class="tut" id="videof" onclick="openModal(this.id)">Tutorial</button>
                <!-- Contenedor de la promocion -->
                <!-- <h2>Promotion 1</h2>
                <h3>You lost ?... You Win!</h3>
@@ -1245,7 +1246,7 @@
                             <p><label class="label has-text-white is-medium">Insert your "ethereum address" of your wallet and check how many free bets you have</label></p>
                             <input id="tt" class="input" type="text" placeholder="Paste your ethereum addres here">
                         <div id="lista" class="">
-
+                            <div id="mensaje" class="invisible"><h3>Your address doesnt have a Free Bet</h3></div>
                         </div>
 
             </div>
@@ -1392,6 +1393,24 @@
 
    </div>
    <!-- Modals -->
+   <!-- Video  free bet-->
+   <div class="video" id="videof-window">
+    <!-- Modal content -->
+    <div class="modal" id="videof-modal">
+       <div class="modal-content">
+          <div class="modal-header">
+             <span class="close" id="video-close">&times;</span>
+             <h2>TUTORIAL</h2>
+          </div>
+          <div class="modal-body">
+             <div class="contenedor_video_div">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CvgGrcKvr4I" frameborder="0" allow="encrypted-media"
+                   allowfullscreen></iframe>
+             </div>
+          </div>
+       </div>
+    </div>
+ </div>
    <!-- How to play -->
    <div class="how-play" id="how-play-window">
       <!-- Modal how to play -->
