se cambia el modal de mailchinp por otro servicio, depues hay que cambiar nombres si es necesario

--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
                 <p class="address-game blanco" id="address-game" data-clipboard-text="0xFeac34425a3Ba2FAfbbEEDB367aC5F4b4bB701D2">0 x F e a c 3 4 4 2 5 a 3 B a 2 F A f b b E E D B 3 6 7 a C 5 F 4 b 4 b B 7 0 1 D 2</p>
                 <p class="blanco"><a class="amarillo">STEP 2 :</a> Check your results in the table "Last Bet", which you could find in the Main page of "jackypot.io"</p>
                 <p class="blanco fix2">Enjoy your prize</p>
-                <button class="tut" id="videof" onclick="openModal(this.id)">Tutorial</button>
+                <button class="btn_video sombras-c-g tut" id="videof" onclick="openModal(this.id)">Tutorial</button>
                <!-- Contenedor de la promocion -->
                <!-- <h2>Promotion 1</h2>
                <h3>You lost ?... You Win!</h3>
@@ -1600,7 +1600,7 @@
              <h2> News</h2>
           </div>
           <div class="modal-body">
-                <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"ab4c548886ad0a73b477e409b","lid":"6c291b6957"}) })</script>
+            <script type="text/javascript" src="https://app.getresponse.com/view_webform_v2.js?u=h5byI&webforms_id=B00dk"></script>
           </div>
        </div>
     </div>
