--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
    <!-- Script -->
    <div id="fb-root"></div>
-   <script type="text/javascript" src="js/sdk-facebook.js"></script>
+   <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+   <!-- <script type="text/javascript" src="js/sdk-facebook.js"></script> -->
    <script type="text/javascript" src="js/snap.svg.js"></script>
    <script type="text/javascript" src="js/blockies.js"></script>
    <script type="text/javascript" src="js/clipboard.js"></script>
@@ -254,8 +255,8 @@
          <div class="box information" id="chat">
             <div class="tittle-chat" onclick="change_focus()">
                <h3>
-                  <span id="tittle-chat-span">CHAT </span>/
-                  <span id="tittle-table-span" class="activo"> LAST BET</span>
+                  <!-- <span id="tittle-chat-span">CHAT </span>/ -->
+                  <span id="tittle-table-span fix3" class="activo"> LAST BET</span>
                </h3>
             </div>
             <div id="datos">
@@ -1095,11 +1096,15 @@
             <!-- Promocion 1 -->
             <div class="free-bets-promocion">
                 <h1 class="verde">LAUNCHING OFFER: 2,000 FREE BETS!</h1>
-                <p class="amarillo">have you reacived 0.00 ether in your ethereum wallet from Jackypot?, Congratulations! you have a Free Bet </p>
-                <p class="blanco">to do your free bet follow these instructions</p>
-                <p class="blanco"><a class="amarillo">STEP 1 :</a> Send 0.00 ether to the following address (The gas is calculated automatically by our contract or otherwise put 300 000)</p>
+                <p class="blanco"><a class="amarillo">STEP 1 :</a> Request your free bet on any of these social networks, we will respond in less than 5 minutes.</p>
+                <a class="a1" href="https://www.facebook.com/Jackypotio-366207440527946/" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+                <a class="a2" href="https://twitter.com/JackypotEth" target="_blank"><i class="fab fa-twitter-square fa-2x" ></i></a>
+                <a  class="a2" href="https://t.me/joinchat/Fl1Syg9xtgmYoXida3vrYw" target="_blank"><i class="fab fa-telegram fa-2x" ></i></a>
+                
+
+                <p class="blanco"><a class="amarillo">STEP 2 :</a> Send 0.00 ether to the following address (The gas is calculated automatically by our contract or otherwise put 300 000)</p>
                 <p class="address-game blanco" id="address-game" data-clipboard-text="0xFeac34425a3Ba2FAfbbEEDB367aC5F4b4bB701D2">0 x F e a c 3 4 4 2 5 a 3 B a 2 F A f b b E E D B 3 6 7 a C 5 F 4 b 4 b B 7 0 1 D 2</p>
-                <p class="blanco"><a class="amarillo">STEP 2 :</a> Check your results in the table "Last Bet", which you could find in the Main page of "jackypot.io"</p>
+                <p class="blanco"><a class="amarillo">STEP 3 :</a> Check your results in the table "Last Bet", which you could find in the Main page of "jackypot.io"</p>
                 <p class="blanco fix2">Enjoy your prize</p>
                 <button class="btn_video sombras-c-g tut" id="videof" onclick="openModal(this.id)">Tutorial</button>
                <!-- Contenedor de la promocion -->
@@ -1405,8 +1410,7 @@
           </div>
           <div class="modal-body">
              <div class="contenedor_video_div">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CvgGrcKvr4I" frameborder="0" allow="encrypted-media"
-                   allowfullscreen></iframe>
+                <div id="freebets"></div>
              </div>
           </div>
        </div>
@@ -1583,8 +1587,7 @@
             </div>
             <div class="modal-body">
                <div class="contenedor_video_div">
-                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CvgGrcKvr4I" frameborder="0" allow="encrypted-media"
-                     allowfullscreen></iframe>
+                     <div id="bets"></div>
                </div>
             </div>
          </div>
